--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-us">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -9,7 +9,7 @@
 
   <body>
     <h1>bouncing balls</h1>
-       <p>Ball count :</p>
+    <p>Ball count :</p>
     <canvas></canvas>
 
     <script src="main.js"></script>
